syntax = "proto3";

package subreddit;

message Subreddit {
    string id = 1; 
    string name = 2; 
    string description = 3; 
    int64 created_at = 5; 
    int32 subscribers_count = 6; 
    int32 creator_id = 7;
}

message Post {
    string id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    string subreddit_id = 5;
    int64 created_at = 6;
    int32 likes_count = 7; 
    int32 comments_count = 8; 
}


message CreateSubredditRequest {
    string name = 1;
    string description = 2;
    string creator_id = 3;
}

message CreateSubredditResponse {
    Subreddit subreddit = 1;
}

message GetSubredditRequest {
    string id = 1;
}

message GetSubredditResponse {
    Subreddit subreddit = 1;
}

message UpdateSubredditRequest {
    string id = 1;
    string description = 2;
    string updater_id = 3; 
    
}

message UpdateSubredditResponse {
    Subreddit subreddit = 1;
}

message DeleteSubredditRequest {
    string id = 1;
    string deleter_id = 2;
}

message DeleteSubredditResponse {
    bool success = 1;
    string message = 2;
}

message SubscribeRequest {
    string user_id = 1;
    string subreddit_id = 2;
}

message SubscribeResponse {
    bool success = 1;
    string message = 2;
}

message UnsubscribeRequest {
    string user_id = 1;
    string subreddit_id = 2;
}

message UnsubscribeResponse {
    bool success = 1;
    string message = 2;
}

message ListSubredditsRequest {
    int32 page = 1; 
    int32 page_size = 2; 
    string sort_by = 3;
    string order = 4; 
    string search_query = 5; 
}

message ListSubredditsResponse {
    repeated Subreddit subreddits = 1;
    int32 total_count = 2; 
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author_id = 3;
    string subreddit_id = 4;
}

message CreatePostResponse {
    Post post = 1;
}

message GetSubredditPostsRequest {
    string subreddit_id = 1;
    int32 page = 2;
    int32 page_size = 3;
    string sort_by = 4; 
    string order = 5;
}

message GetSubredditPostsResponse {
    repeated Post posts = 1;
    int32 total_count = 2;
}


service SubredditService {
    rpc CreateSubreddit(CreateSubredditRequest) returns (CreateSubredditResponse);
    rpc GetSubreddit(GetSubredditRequest) returns (GetSubredditResponse);
    rpc UpdateSubreddit(UpdateSubredditRequest) returns (UpdateSubredditResponse);
    rpc DeleteSubreddit(DeleteSubredditRequest) returns (DeleteSubredditResponse);
    rpc ListSubreddits(ListSubredditsRequest) returns (ListSubredditsResponse);

    rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);
    rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse);

    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc GetSubredditPosts(GetSubredditPostsRequest) returns (GetSubredditPostsResponse);
}
