syntax = "proto3";
package user;
message User {
    string username = 1;
    string email = 2;
    int32 id = 3; 
    string img = 4;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3; 
}

message CreateUserResponse {
    int32 id = 1;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1; 
}

message CreateTokenRequest {
    string email = 1;    
    string password = 2;
}

message CreateTokenResponse {
    string token = 1;
}

message IsAuthenticatedRequest {
    string token = 1;
}

message IsAuthenticatedResponse {
    string email = 2;
}
message UpdatePictureRequest {
    string img = 1;
    int32 userid =2;
    }
    message UpdatePictureResponse {
        User user = 1; 
    }
service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
    rpc UpdatePicture(UpdatePictureRequest) returns (UpdatePictureResponse) {};
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
    rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse) {};
    rpc IsAuthenticated(IsAuthenticatedRequest) returns (IsAuthenticatedResponse) {};
}
